--- a/sacramental_enrolments.html
+++ b/sacramental_enrolments.html
@@ -122,8 +122,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7"><strong>Parish Priest:</strong> Fr Wayne Davis
-<br><strong>Secretary: </strong>Prue Pupazzoni<br><br>Email: claremont@perthcatholic.org.au <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7"><strong>Parish Priest:</strong><br>Fr Richard&nbsp;Rutkauskas&nbsp;<br><strong>Secretary: </strong>Prue Pupazzoni<br><br>Email: claremont@perthcatholic.org.au <br>
                     Phone: +61 9384 0598<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -171,7 +170,7 @@
             </div>
             <div class="col-sm-12 copyright pl-0">
                 <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                    © Copyright 2023 	St Thomas the Apostle Claremont - All Rights Reserved
+                    © Copyright 2024 St Thomas the Apostle Claremont - All Rights Reserved
                 </p>
             </div>
         </div>
